--- a/css/custom.css
+++ b/css/custom.css
@@ -150,16 +150,16 @@ section h2 {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #737afb;
+  color: #0098f6;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
-  color: #737afb;
+  color: #0098f6;
   outline:  none;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #737AFB;
+  color: #0098f6;
 }
 
 #mainNav .navbar-toggler {
@@ -187,11 +187,11 @@ section h2 {
     margin-top: 0;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
-    color: #737AFB;
+    color: #0098f6;
     /* background: #18BC9C; */
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
-    color: #737afb;
+    color: #0098f6;
     background: #ffffff;
   }
   #mainNav.navbar-shrink {
@@ -241,7 +241,7 @@ a {
 }
 
 a:focus, a:hover, a:active {
-  color: #737afb;
+  color: #0098f6;
 }
 
 .btn {
@@ -249,7 +249,7 @@ a:focus, a:hover, a:active {
 }
 
 .bg-primary {
-  background-color: #737afb !important;
+  background-color: #0098f6 !important;
 }
 
 .bg-secondary {
