--- a/css/navbar_slider.css
+++ b/css/navbar_slider.css
@@ -5,7 +5,7 @@
     z-index: 1031;
     top: 0;
     right: 0;
-    background-color: #737afb;
+    background-color: #0098f6;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
