--- a/css/custom.css
+++ b/css/custom.css
@@ -286,3 +286,6 @@ a:focus, a:hover, a:active {
   background-color: #1a252f;
   border-color: #1a252f;
 }
+.disable-temp{
+  cursor: not-allowed;
+}
